    - Restore Sigil's update checker that's been broken for a while
    - Update sigil_bs4 prettyprint_xhtml and serialize_xhtml routines to use logic of code in GumboInterface
    - Update sigil_bs4 to use numeric entities when faced with nbsp so they do not get lost later in Sigil
    - Rename "Sanity Check" to "Well-Formed Check EPUB" and remove check icon people confused with FlightCrew



Sigil 0.9.1
    - Fix bug when template sgc_toc.css could be changed to blank on save, since no InitialLoad() was done
    - Change order of TextResource m_IsLoaded and m_CacheInUse flags to minimize potential race exposure.
    - Fix PluginRunner bug that introduced errors into xhtml files when both the content.opf and xhtml were modified
    - Auto XML Decode and Escape Metadata entries created in the Metadata GUI
    - Alter pluginhunspell.py so a missing libhunspell doesn't stop ALL plugins from working
    - Default to using clean by gumbo vs prettyprint gumbo in new installs
    - Fix prettyprint bug with trailing whitespace improperly inserted after inline tags inside div tags
    - Fix for bundled interpreter packages PIL and cssutils on Mac OS X that were missing
    - Fix for crash when using Find in BV on pages with no text, only images (issue #156)
    - Added testplugin_v010.zip to docs to allow Linux packagers to test their plugin implementation
    - Fix for prettyprint bug with tables (issue # 158)
    - Fix for serialize in gumbo to limit injected returns
    - Update to Sigil_Plugin_Framework_rev6.epub
    - Make build order of sigilgumbo deterministic in order to help Linux packagers
    - Make plugin launcher success and error messages robust to non-utf-8 strings
    - Fix for crash bug when comments exist inside manifest of opf
    - Fix for Sigil's gumbo - only inject end tags when current token does NOT need to be reprocessed


Sigil 0.9.0 Release
    - Add "Use Bundled Python" option to bring sanity and choice to Python3 Interpreter selection