@@ -20,7 +20,8 @@ Sigil 0.9.2
     - Update sigil_bs4 prettyprint_xhtml and serialize_xhtml routines to use logic of code in GumboInterface
     - Update sigil_bs4 to use numeric entities when faced with nbsp so they do not get lost later in Sigil
     - Rename "Sanity Check" to "Well-Formed Check EPUB" and remove check icon people confused with FlightCrew
-
+    - Fix out of date error message referencing Tidy
+    - Don't allow bad doctypes to pass through gumbo parse/serialize - remove them
 
 
 Sigil 0.9.1
